--- a/.env.production
+++ b/.env.production
@@ -5,4 +5,4 @@
 # For example, login request will be POST to: 
 # https://sfr1ge43pl.execute-api.us-east-1.amazonaws.com/dev/auth/login
 
-VITE_API_BASE_URL=https://sfr1ge43pl.execute-api.us-east-1.amazonaws.com/dev/welcome
+VITE_API_BASE_URL=https://sfr1ge43pl.execute-api.us-east-1.amazonaws.com/dev/
