--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^7.3.2",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.9.2"
   },
   "devDependencies": {
