fix search and add the pagination for the varient

--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,5 @@
 # This ensures local development still talks to your local backend server.
 VITE_API_BASE_URL=http://localhost:5000/api 
 # (Assuming your local server uses a common prefix like /api for its routes)
+
+# VITE_API_BASE_URL=https://sfr1ge43pl.execute-api.us-east-1.amazonaws.com/dev/api
