--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "7.3.2",
     "@mui/material": "7.3.2",
     "@tailwindcss/vite": "4.1.16",
+    "@tanstack/react-query": "^5.90.16",
     "axios": "1.12.2",
     "dotenv": "17.2.3",
     "framer-motion": "12.23.24",
